k8s/service.yaml
apiVersion: v1
kind: Service
metadata.name: clouddeploy-service
spec:
  type: NodePort
  selector:
    app: clouddeploy-backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
